--- a/_posts/2023-24-12-1.md
+++ b/_posts/2023-24-12-1.md
@@ -17,7 +17,7 @@ Bazı durumlarda Azure Site Recovery ile kopyalanan on-premises makinanın diskl
 
 **Ne yapmamız lazım ?**
 
-Yüksek veri değişimin olduğu belirli zamanlarda bu hata ile karşılaşmanız normaldir ancak bu hata sürekli olarak karşınıza çıkıyorsa çözüm olarak; Azure üzerine kopyalanan on-premises makinanın hedef disk türünü değiştirmelisiniz. Bu seçenek  veri değişim oranın 20MB/s’den az olması durumunda işe yarayacaktır. 
+Yüksek veri değişimin olduğu belirli zamanlarda bu hata ile karşılaşmanız normaldir ancak bu hata sürekli olarak karşınıza çıkıyorsa çözüm olarak; Azure üzerine kopyalanan on-premises makinanın hedef disk türünü değiştirmelisiniz. Bu seçenek  veri değişim oranın 20MB/s’den az olması durumunda işe yarayacaktır......
 
 1.	**Azure Portal -> Disks ->** Hatayı aldığınız diski seçin.
 2.	SAS URL'sinin oluşturulduğunu belirten uyarıyı seçerek iptal edin. (SAS URL sonrasında ASR tarafından otomatik olarak tekrar oluşturulacak)
