--- a/_posts/2024.08.08-Azure-VM-Temporary-Diskler.md
+++ b/_posts/2024.08.08-Azure-VM-Temporary-Diskler.md
@@ -22,7 +22,7 @@ Non persistent diskler direk olarak fiziksel makine üzerinde bulunduklarından 
 
 Farklı sebeplerden dolayı (Donanımsal Arızalar vs.) sanal makinanızın farklı bir host üzerine taşınması gerekebilir bu durumda Azure Storage içerisindeki OS diskiniz kullanılarak sanal makinanız tekrardan yeni host üzerinde oluşturulur. Temporary disk içerisindeki verileriniz ise silinerek sanal makinanıza yeni bir temporary disk atanır. Ayrıca sanal makinanın resize edilmesi yada restart edilmesi sonucuda  temporary diskiniz içerisindeki verileriniz kaybolur. Temporary disk boyunları sanal makinanızın size’ına bağlı olarak değişir ve ekstra bir ücreti yoktur.
 
-## Peki nedir bu Temporary Diskin amacı ? 
+## Peki nedir bu Geçici Diskin amacı ? 
 
 Temporary Diskler sanal ram belleği olarak bilinen pagefile.sys dosyasını barındırmak için kullanıırlar. 
 
